Implement ticket status state machine and fix test bean conflict