@@ -11,58 +11,207 @@ import org.junit.jupiter.api.Test;
 
 import java.time.Instant;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 class TicketTest {
 
     private Ticket ticket;
-    private final Instant now = Instant.now();
+    private Instant now;
 
     @BeforeEach
     void setUp() {
-        ticket = new Ticket(TicketId.generate(), "System Crash", "App crashes on launch", now);
+        now = Instant.parse("2026-08-02T12:00:00Z");
+
+        ticket = new Ticket(
+                TicketId.generate(),
+                "System Crash",
+                "Application crashes on launch",
+                now
+        );
     }
 
     @Test
-    @DisplayName("New ticket should start in OPEN status")
-    void newTicketShouldBeOpen() {
+    @DisplayName("New ticket should start with OPEN status")
+    void newTicketShouldStartWithOpenStatus() {
         assertEquals(TicketStatus.OPEN, ticket.getStatus());
         assertTrue(ticket.getComments().isEmpty());
     }
 
     @Test
-    @DisplayName("Should successfully transition status from OPEN -> IN_PROGRESS -> RESOLVED -> CLOSED")
-    void validStatusTransitions() {
-        ticket.transitionTo(TicketStatus.IN_PROGRESS, now);
-        assertEquals(TicketStatus.IN_PROGRESS, ticket.getStatus());
+    @DisplayName("Ticket should follow valid status transition flow")
+    void shouldFollowValidStatusTransitionFlow() {
+        ticket.transitionTo(
+                TicketStatus.IN_PROGRESS,
+                now.plusSeconds(60)
+        );
 
-        ticket.transitionTo(TicketStatus.RESOLVED, now);
-        assertEquals(TicketStatus.RESOLVED, ticket.getStatus());
+        assertEquals(
+                TicketStatus.IN_PROGRESS,
+                ticket.getStatus()
+        );
 
-        ticket.transitionTo(TicketStatus.CLOSED, now);
-        assertEquals(TicketStatus.CLOSED, ticket.getStatus());
+        ticket.transitionTo(
+                TicketStatus.WAITING_CUSTOMER,
+                now.plusSeconds(120)
+        );
+
+        assertEquals(
+                TicketStatus.WAITING_CUSTOMER,
+                ticket.getStatus()
+        );
+
+        ticket.transitionTo(
+                TicketStatus.IN_PROGRESS,
+                now.plusSeconds(180)
+        );
+
+        assertEquals(
+                TicketStatus.IN_PROGRESS,
+                ticket.getStatus()
+        );
+
+        ticket.transitionTo(
+                TicketStatus.RESOLVED,
+                now.plusSeconds(240)
+        );
+
+        assertEquals(
+                TicketStatus.RESOLVED,
+                ticket.getStatus()
+        );
+
+        ticket.transitionTo(
+                TicketStatus.CLOSED,
+                now.plusSeconds(300)
+        );
+
+        assertEquals(
+                TicketStatus.CLOSED,
+                ticket.getStatus()
+        );
     }
 
     @Test
-    @DisplayName("Should throw exception when resolving directly from OPEN status")
-    void invalidDirectResolution() {
-        assertThrows(InvalidStatusTransitionException.class,
-                () -> ticket.transitionTo(TicketStatus.RESOLVED, now));
+    @DisplayName("Resolved ticket should be reopenable")
+    void resolvedTicketShouldBeReopenable() {
+        ticket.transitionTo(
+                TicketStatus.IN_PROGRESS,
+                now.plusSeconds(60)
+        );
+
+        ticket.transitionTo(
+                TicketStatus.RESOLVED,
+                now.plusSeconds(120)
+        );
+
+        ticket.transitionTo(
+                TicketStatus.IN_PROGRESS,
+                now.plusSeconds(180)
+        );
+
+        assertEquals(
+                TicketStatus.IN_PROGRESS,
+                ticket.getStatus()
+        );
     }
 
     @Test
-    @DisplayName("Should allow adding comments when ticket is open or in progress")
-    void addCommentSuccessfully() {
-        ticket.addComment("Alice", "Investigating logs...", now);
+    @DisplayName("Ticket should not transition directly from OPEN to RESOLVED")
+    void shouldRejectOpenToResolvedTransition() {
+        assertThrows(
+                InvalidStatusTransitionException.class,
+                () -> ticket.transitionTo(
+                        TicketStatus.RESOLVED,
+                        now.plusSeconds(60)
+                )
+        );
+    }
+
+    @Test
+    @DisplayName("Ticket should not transition directly from OPEN to CLOSED")
+    void shouldRejectOpenToClosedTransition() {
+        assertThrows(
+                InvalidStatusTransitionException.class,
+                () -> ticket.transitionTo(
+                        TicketStatus.CLOSED,
+                        now.plusSeconds(60)
+                )
+        );
+    }
+
+    @Test
+    @DisplayName("Ticket should not transition directly from OPEN to WAITING_CUSTOMER")
+    void shouldRejectOpenToWaitingCustomerTransition() {
+        assertThrows(
+                InvalidStatusTransitionException.class,
+                () -> ticket.transitionTo(
+                        TicketStatus.WAITING_CUSTOMER,
+                        now.plusSeconds(60)
+                )
+        );
+    }
+
+    @Test
+    @DisplayName("Comment should be added to an active ticket")
+    void shouldAddCommentToActiveTicket() {
+        ticket.addComment(
+                "Alice",
+                "Investigating application logs",
+                now.plusSeconds(60)
+        );
+
         assertEquals(1, ticket.getComments().size());
-        assertEquals("Alice", ticket.getComments().get(0).getAuthor());
+        assertEquals(
+                "Alice",
+                ticket.getComments().getFirst().getAuthor()
+        );
     }
 
     @Test
-    @DisplayName("Should throw exception when adding comment to a CLOSED ticket")
-    void cannotCommentOnClosedTicket() {
-        ticket.transitionTo(TicketStatus.CLOSED, now);
-        assertThrows(TicketClosedException.class,
-                () -> ticket.addComment("Bob", "Late comment", now));
+    @DisplayName("Comment should not be added to a closed ticket")
+    void shouldRejectCommentOnClosedTicket() {
+        closeTicket();
+
+        assertThrows(
+                TicketClosedException.class,
+                () -> ticket.addComment(
+                        "Bob",
+                        "Late comment",
+                        now.plusSeconds(300)
+                )
+        );
+    }
+
+    @Test
+    @DisplayName("Closed ticket should not allow another status transition")
+    void closedTicketShouldRejectAnotherTransition() {
+        closeTicket();
+
+        assertThrows(
+                TicketClosedException.class,
+                () -> ticket.transitionTo(
+                        TicketStatus.IN_PROGRESS,
+                        now.plusSeconds(300)
+                )
+        );
+    }
+
+    private void closeTicket() {
+        ticket.transitionTo(
+                TicketStatus.IN_PROGRESS,
+                now.plusSeconds(60)
+        );
+
+        ticket.transitionTo(
+                TicketStatus.RESOLVED,
+                now.plusSeconds(120)
+        );
+
+        ticket.transitionTo(
+                TicketStatus.CLOSED,
+                now.plusSeconds(180)
+        );
     }
 }
